CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(project ncio)
SET(subdir ${project})
PROJECT(${project} CXX C)

#SET_PROPERTY(TARGET ${project} PROPERTY CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} $ENV{CXX_FLAGS}")
SET(CMAKE_THREAD_PREFER_PTHREAD TRUE)
# flag used for abi compatibility post-gcc-5.1
ADD_DEFINITIONS(-D_GLIBCXX_USE_CXX11_ABI=0 -D${project}_STATIC)

# main library
FILE(GLOB srcs ${PROJECT_SOURCE_DIR}/${subdir}/*.cpp)
ADD_LIBRARY(${project} STATIC ${srcs})

FIND_PACKAGE(Boost 1.60 COMPONENTS unit_test_framework regex REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIR})
FIND_PACKAGE(Doxygen)
INCLUDE_DIRECTORIES(/usr/local/include)
FIND_PACKAGE(Curses REQUIRED)
INCLUDE_DIRECTORIES(${CURSES_INCLUDE_DIR})

# version
SET(${project}_VERSION 1.0)
CONFIGURE_FILE(${subdir}/version_config.h.in ${CMAKE_BINARY_DIR}/generated/version_config.h)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/generated/)

# documentation
FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/doc/html)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
  ${CMAKE_BINARY_DIR}/Doxyfile @ONLY)
ADD_CUSTOM_TARGET(doc ${DOXYGEN_EXECUTABLE}
  ${CMAKE_BINARY_DIR}/Doxyfile
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
  COMMENT "Generating Doxygen documentation" VERBATIM
  )

# installation
SET(CMAKE_INSTALL_PREFIX "$ENV{HOME}")
FILE(GLOB headers ${PROJECT_SOURCE_DIR}/${subdir}/*.hpp)
INSTALL(FILES ${headers} DESTINATION include/${project})
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/doc/html DESTINATION doc/${project})
INSTALL(TARGETS ${project}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )

ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(apps)
