# example1
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})

FILE(GLOB srcs "${CMAKE_CURRENT_SOURCE_DIR}/${target}/*.cpp")
ADD_EXECUTABLE(${target} ${srcs})
FIND_PACKAGE(Threads REQUIRED)
TARGET_LINK_LIBRARIES(${target} ${project} stdc++ ${CMAKE_THREAD_LIBS_INIT}  ${CURSES_LIBRARIES})
INSTALL(TARGETS ${target}
  RUNTIME DESTINATION bin
)
